--- a/students/index.html
+++ b/students/index.html
@@ -23,10 +23,16 @@
                      <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
                      <h2>The Ram Frame of Mind</h2>
                      <p>
+                         <strong>Be well</strong>- Our main priority is your health! Please check out the health tips and FAQs on the VCU University Health Services. 
+                     </p>
+                     <p>
                         <strong>Be proactive</strong>- The more you prepare in advance, the easier the transition. Update your contact information with VCU. At least once a day, check your <a href="http://mail.google.com/a/mymail.vcu.edu">VCU email</a> and any course communication tools (for example, <a href="https://blackboard.vcu.edu/">Blackboard</a>) for updates. 
                      </p>
                      <p>
                         <strong>Stay calm</strong>- Even though you may feel quite stressed or uncertain, try your best to breathe in, breathe out, repeat. Staying calm can help you focus, make a plan, keep yourself organized, and make logical decisions. 
+                     </p>
+                     <p>
+                         <strong>Embrace integrity</strong> - Continue to embrace and adhere to the VCU academic integrity policy. Rams are leaders with regard to taking the VCU honor pledge seriously. 
                      </p>
                      <p>
                         <strong>Practice flexibility</strong>- Your instructors may be learning new things as well. They will be looking at creative ways to deal with assignments, exams, discussions, avenues for student submission of their work, etc. In the end, just put your best foot forward and be open to change.  
@@ -66,12 +72,127 @@
                 <div class="col-md-8">
                   <p>There is a lot of bad information out there on social media. We want you to stay informed with truly accurate information on the current COVID-19 situation. President Rao has been providing regular updates via email and on the <a href="https://blogs.vcu.edu/covid-19-coronavirus/">VCU COVID-19 website</a> dedicated to keeping us all informed. </p>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-8">
                   <h2>Working Together on Group Projects</h2>
+                  <p>Just because you're not in the same room doesn't mean you can't collaborate. A variety of tools open up options to keep working with other students and faculty</p>
+                </div>
+            </div>
+                <!--gsuite start-->
+                <div class="row single-app-row" id="gsuite">
+                    <div class="col-md-12">
+                      <h3>Google Suite</h3>      
+                    </div>
+                    <div class="col-md-5">
+                      <div class="description">
+                        <h4>Description</h4>
+                        <p>The Google Suite is a set of free tools closely aligned to Microsoft’s Office suite. These tools offer increased flexibility for viewing across devices and provide increased options for online collaboration.</p>
+                      </div>
+                    </div>
+                    <div class="col-md-4 restrictions">
+                      <h4>Details</h4>
+                      <ul>
+                        <li>Unlimited storage</li>
+                        <li>Content works well on laptops and phones</li>
+                        <li>Options to comment, publish to the web, embed in other systems</li>
+                      </ul>
+                    </div>
+                    <div class="col-md-3">
+                      <h4>Resources</h4>
+                      <ul>
+                        <li><a href="https://www.linkedin.com/learning/team-collaboration-in-g-suite/understand-g-suite-and-google-apps?u=76209018">Understand G Suite and Google Apps</a></li>
+                        <li><a href="https://support.google.com/docs/answer/6199477">Make your Google document or presentation more accessible</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!--gsuite end-->
+                   <!--zoom row-->
+                  <div class="row single-app-row" id="zoom">
+                    <div class="col-md-12">
+                      <h3>Zoom</h3>      
+                    </div>
+                    <div class="col-md-5">
+                      <div class="description">
+                        <h4>Description</h4>
+                        <p>Zoom is a good option for live video and audio conferencing, collaboration, chat, and webinars across mobile devices, desktops, and telephones. </p>        
+                      </div>
+                    </div>
+                    <div class="col-md-4 restrictions">
+                      <h4>Details</h4>
+                      <ul>
+                        <li>40 minute limit on free accounts</li>
+                        <li>Unlimited 1 to 1 meetings</li>
+                      </ul>
+                    </div>
+                    <div class="col-md-3">
+                      <h4>Resources</h4>
+                      <ul>
+                        <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom at VCU</a></li>
+                        <li><a href="https://support.zoom.us/hc/en-us/articles/115004794983-Automatically-Transcribe-Cloud-Recordings-">Creating a Zoom transcript</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <!--end zoom row-->
+                <div class="col-md-12">
+                  <h2>Technology Support & Resources</h2>
                 </div>
                 <div class="col-md-8">
-                  <p></p>
+                  <h3>Hardware Needs</h3>
+                  <h4>Laptop Checkout Options</h4>
+                  <h5>James Branch Cabell Library and Tompkins-McCaw Library</h5>
+                  <p>A small fleet of laptops are available for students to check out from the IT Support Center located in the lower level of the James Branch Cabell Library.There are also a few laptops  available at Tompkins-McCaw Library at the service desk. A valid VCU ID card will be required for checkouts.</p>
+                  <h5>University College</h5>
+                  <p>University College has 4 laptops for student check-out. To check them out, students come to Harris 5116, show their student ID, and fill out this form, which is also signed by the UC employee working the front desk. Students are allowed to check out a laptop for one business day.</p>
+
+                  <h4>Laptop Purchase</h4>
+                  <p>If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM</a> Tech (VCU discounts and payroll deduction) or a reputable retailer.  Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote learning.</p>
+                  <p>Wifi / internet access:  students can add “hot spots” to their wireless cell phone plans or access VCU SafeNet while in your car in/around the VCU campuses.</p>
+                  <h5>VCU Military Services</h5>
+                  <p>For our veterans who need a laptop computer a local veteran support organization, <a href="https://techfortroops.org/">Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
                 </div>
+                <div class="col-md-8">
+                  <h3>Technology Support</h3>
+                  <ul>
+                    <li><a href="https://ts.vcu.edu/it-support-center/">IT Support (chat, email, phone)</a></li>
+                    <li><a href="https://go.vcu.edu/itsupport">Submit a help ticket</a></li>
+                    <li><a href="https://ts.vcu.edu/askit/teaching-and-learning/blackboard-elearning/">Blackboard help</a> - If you can not find the answer to your questions from the Blackboard Help links on this page, please email <a href="mailto:blackboard@vcu.edu">blackboard@vcu.edu</a>. A support staff member will then contact you as soon as possible.</li>
+                  </ul>
+                </div>
+                <div class="col-md-8">
+                  <h3>Technology Support</h3>
+                  <ul>
+                    <li><a href="https://clc.vcu.edu/forms/ditutoring/">Tutoring: </a>Tutoring services will continue to be offered but in a Zoom format. Students will be sent a Zoom link by their tutor to join the session.  Students will be given information about their sessions via email beforehand.</li>
+                    <li><a href="https://clc.vcu.edu/supplemental-instruction/">Supplemental Instruction: </a>Courses that have supplemental instruction will continue to host sessions as regularly scheduled, but via a Zoom/Adobe Connect platform.  More information will be provided to students via their class Blackboard site via an announcement.</li>
+                    <li><a href="https://clc.vcu.edu/academic-coaching/">Academic Coaching: </a>The Campus Learning Center will continue to provide academic coaching via Zoom. Jumpstart sessions will also be continued via Zoom.  Students will be sent a Zoom link by their coach to join the session.</li>
+                    <li><a href="https://academicadvising.vcu.edu/">Academic Advising: </a>Your VCU academic advisor will continue to make regular appointments for advising using the Navigate system (available through your <a href="http://vcu.campus.eab.com/">Navigate app</a> or through <a href="https://my.vcu.edu/" title="">eServices/MyVCU</a>).  Advising will be provided either by phone, email, Google Hangout/Chat, or Zoom.</li>
+                  </ul>
+                </div>
+                <div class="col-md-8">
+                  <h3>Policies</h3>
+                  <ul>
+                    <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
+                    <li><a href="https://conduct.students.vcu.edu/student-code-of-conduct/">Student Code of Conduct</a></li>
+                    <li><a href="https://conduct.students.vcu.edu//vcu-honor-system/">VCU Honor Code</a></li>
+                    <li><a href="http://bulletin.vcu.edu/academic-regs/university/attendance/">Attendance</a></li>
+                    <li><a href="http://bulletin.vcu.edu/academic-regs/ugrad/medical-leave-absence/">Medical Leave of Absence </a>(undergraduate students) and <a href="http://bulletin.vcu.edu/academic-regs/university/leave-of-absence/">Leave of Absence</a> (Graduate and Professional students only)</li>
+                    <li> <a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form</a> (requesting incomplete grade)</li>
+                </ul>
+               
+                </div>
+                  <!--row inclusive excellence-->
+                  <div class="col-md-8">
+                    <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
+                    <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is unlawful. It is also harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its reoccurence. Every member of our community is asked to:</p>
+                    <ul>
+                      <li>Become familiar with the university’s policy on <a href="https://policy.vcu.edu/universitywide-policies/policies/preventing-and-responding-to-discrimination.html">preventing and responding to discrimination</a> in the VCU Policy Library.</li>
+                      <li>Consult with Equity and Access Services or <a href="https://hr.vcu.edu/">VCU Human Resources</a> for additional guidance on how to maintain a bias-free environment.</li>
+                      <li>Encourage individuals affected by this type of misconduct to file a report of discrimination or harassment with <a href="https://equity.vcu.edu/">Equity and Access Services</a>.</li>
+                      <li>Bookmark and share information on university or community agencies that offer support or services, such as <a href="https://counseling.vcu.edu/">VCU Counseling Services</a>.</li>
+                      <li>Offer nonjudgmental support and empathy to those affected.</li>
+                    </ul>
+                  </div>
+                <!--end inclusive -->
+
             </div>
          </div>
 
