--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <div class="col-md-3">
       <h4>Resources</h4>
       <ul>
-        <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom at VCU</a></li>
+        <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom Pro at VCU</a></li>
         <li><a href="https://support.zoom.us/hc/en-us/articles/115004794983-Automatically-Transcribe-Cloud-Recordings-">Creating a Zoom transcript</a></li>
         <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
       </ul>
@@ -517,9 +517,19 @@
       <h3 id="hardware">Additional Resources:</h3>
       <ul>
         <li>Hardware Needs:  If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM Tech</a> (VCU discounts and payroll deduction) or a reputable retailer.  Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote teaching and learning.</li>
-        <li>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </li>
-        
+        <li>Wifi/internet access:  employees and students can add “hot spots” to their wireless cellphone plans or access VCU SafeNet while being in your car in/around the VCU campuses.  </li>        
       </ul>
+      <div class="col-md-8">
+        <h3 id="policy">Policies:</h3>
+        <ul>
+              <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
+              <li><a href="https://conduct.students.vcu.edu/student-code-of-conduct/">Student Code of Conduct</a></li>
+              <li><a href="https://conduct.students.vcu.edu//vcu-honor-system/">VCU Honor Code</a></li>
+              <li><a href="http://bulletin.vcu.edu/academic-regs/university/attendance/">Attendance</a></li>
+            <li>
+            <a href="http://bulletin.vcu.edu/academic-regs/ugrad/medical-leave-absence/">Medical Leave of Absence </a>(undergraduate students) and <a href="http://bulletin.vcu.edu/academic-regs/university/leave-of-absence/">Leave of Absence</a> (Graduate and Professional students only)</li>
+        </ul>
+      </div>
     </div>
        <!--row inclusive excellence-->
       <div class="col-md-8">
