--- a/students/index.html
+++ b/students/index.html
@@ -32,7 +32,7 @@
                         <strong>Stay calm</strong>- Even though you may feel quite stressed or uncertain, try your best to breathe in, breathe out, repeat. Staying calm can help you focus, make a plan, keep yourself organized, and make logical decisions. 
                      </p>
                      <p>
-                         <strong>Embrace integrity</strong> - Continue to embrace and adhere to the VCU academic integrity policy. Rams are leaders with regard to taking the VCU honor pledge seriously. 
+                         <strong>Embrace integrity</strong> - Continue to embrace and adhere to the VCU academic integrity policy. Rams are leaders with regard to taking the <a href="https://conduct.students.vcu.edu//vcu-honor-system/academic-misconduct-/honor-pledge/">VCU honor pledge</a> seriously. 
                      </p>
                      <p>
                         <strong>Practice flexibility</strong>- Your instructors may be learning new things as well. They will be looking at creative ways to deal with assignments, exams, discussions, avenues for student submission of their work, etc. In the end, just put your best foot forward and be open to change.  
@@ -170,15 +170,22 @@
                 <div class="col-md-8">
                   <h3>Policies</h3>
                   <ul>
-                    <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
-                    <li><a href="https://conduct.students.vcu.edu/student-code-of-conduct/">Student Code of Conduct</a></li>
-                    <li><a href="https://conduct.students.vcu.edu//vcu-honor-system/">VCU Honor Code</a></li>
-                    <li><a href="http://bulletin.vcu.edu/academic-regs/university/attendance/">Attendance</a></li>
-                    <li><a href="http://bulletin.vcu.edu/academic-regs/ugrad/medical-leave-absence/">Medical Leave of Absence </a>(undergraduate students) and <a href="http://bulletin.vcu.edu/academic-regs/university/leave-of-absence/">Leave of Absence</a> (Graduate and Professional students only)</li>
-                    <li> <a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form</a> (requesting incomplete grade)</li>
-                </ul>
-               
+                        <li><a href="https://policy.vcu.edu/universitywide-policies/policies/computer-and-network-resources-use.html">Computer &amp; Network Resources Use</a></li>
+                        <li><a href="https://conduct.students.vcu.edu/student-code-of-conduct/">Student Code of Conduct</a></li>
+                        <li><a href="https://conduct.students.vcu.edu//vcu-honor-system/">VCU Honor Code</a></li>
+                        <li><a href="http://bulletin.vcu.edu/academic-regs/university/attendance/">Attendance</a></li>
+                        <li><a href="http://bulletin.vcu.edu/academic-regs/ugrad/medical-leave-absence/">Medical Leave of Absence </a>(undergraduate students) and <a href="http://bulletin.vcu.edu/academic-regs/university/leave-of-absence/">Leave of Absence</a> (Graduate and Professional students only)</li>
+                        <li> <a href="https://rar.vcu.edu/media/strategic-enrollment-management/rar/docs/IncompleteGrade1.pdf">Incomplete Grade Form</a> (requesting incomplete grade)</li>
+                    </ul>
                 </div>
+                 <div class="col-md-8">
+                  <h3>Labs & Outside Placements</h3>
+                      <ul>
+                        <li>For courses with labs as a component of the course, please speak with your professor about the plan for lab work in a remote or online format. </li>
+                        <li>If you are involved in a research lab, you will also want to contact the faculty member in charge of the research lab to find out more. Faculty members will have to create a plan for how and if they will proceed with research lab activities during a remote instruction situation.</li>
+                        <li>For students who are currently on internships, practica, placements, field experiences, or any activities that involve off campus partners, please communicate with your professor, program coordinator, or department chair about the plan of action. They can help you determine the path forward.</li>                    
+                    </ul>
+                 </div>
                   <!--row inclusive excellence-->
                   <div class="col-md-8">
                     <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
