--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
             
              <div class="col-md-12 alert alert-covid" role="alert" id="alert">
               <h2>Coronavirus Instructional Support</h2>
-               <p>Open office hours to support course transition will be held from <strong>8AM-5PM Monday-Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>. </p>
+               <p>Open office hours to support course transition will be held from <strong>8AM-5PM Monday-Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>. </p>                           
+
                <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online and/or after normal business hours here.</a></p>
-            </div>      
+            </div> 
+
+            <p>You can see <a href="https://altlab.vcu.edu/rapid-response/students"> transition support resources for students here.</a></p>
 
             <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
 
