--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/main.css?ver=2">
     </head>
     <body>
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
@@ -22,13 +22,17 @@
             <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
             
              <div class="col-md-12 alert alert-covid" role="alert" id="alert">
-              <h2>Coronavirus Instructional Support</h2>
-               <p>Open office hours to support course transition will be held from <strong>8AM-5PM Monday-Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>. </p>                           
+              <h2>Get Help Now</h2>
+              <div class="alert-header">In Person</div>
+               <p>Open office hours to support course transition will be held from <strong>8AM-5PM Monday-Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>.</p>  
+                
+              <div class="alert-header">Virtual</div> 
+               <p><a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request&afterhours_support=No&teleconferencing=Yes">Click here to request a virtual meeting </a> at any point 8AM-10PM Monday-Friday or ask a question at any time.</p>                         
 
                <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online and/or after normal business hours here.</a></p>
             </div> 
 
-            <p>You can see <a href="https://altlab.vcu.edu/rapid-response/students"> transition support resources for students here.</a></p>
+            <p>Please share these <a href="https://altlab.vcu.edu/rapid-response/students">Keep Learning student support resources with your students.</a></p>
 
             <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
 
@@ -175,7 +179,7 @@
     <div class="col-md-5">
       <div class="description">
         <h4>Description</h4>
-        <p>Email may be the place you feel most comfortable. Consider building a mailing list per class to help manage your student addresses. Additional information on getting students emails, creating email lists, and general email productivity tips can be found under resources. </p>
+        <p>Email may be the place you feel most comfortable. Consider building a mailing list per class to help manage your student addresses. Larger classes will need a <a href="https://www.google.com/url?q=https://collaborate.vcu.edu/apps/groups/&sa=D&ust=1584043996087000&usg=AFQjCNGO64QZLz1lYI6pIx51UO7qbZ09BQ">Google Group</a> to avoid being flagged as spam. Additional information on getting students emails, creating email lists, and general email productivity tips can be found under resources. </p>
         <p><a href=""></a></p>
       </div>
     </div>
@@ -184,7 +188,8 @@
       <ul>
         <li>Keep all communications with students on your official VCU email address.</li>
         <li>All VCU students have @mymail.vcu email addresses.</li>
-        <li>Faculty members have unlimited storage space in Gmail.</li>
+        <li>Faculty members and students have unlimited storage space in Gmail.</li>
+        <li>Adding large lists to a bcc field rather than using a Google group may be flagged as spam.</li>
       </ul>
     </div>
     <div class="col-md-3">
@@ -256,7 +261,7 @@
       <div class="col-md-3">
         <h4>Resources</h4>
         <ul>
-          <li><a href="https://collaborate.vcu.edu/apps/drive/">VCU Collaboration Services Google Suite Support </a></li>
+          <li><a href="https://collaborate.vcu.edu/apps/drive/">Google Drive at VCU</a></li>
           <li><a href="https://www.linkedin.com/learning/google-drive-essential-training-3/do-more-than-store-files-with-google-drive?u=76209018">Google Drive Essential Training</a></li>
           <li><a href="https://support.google.com/a/users/answer/9310246?hl=en">General Google Drive Information</a></li>
         </ul>
