return to top/strategies

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css?ver=2">
     </head>
-    <body>
+    <body id="top">
       <!--this is an evolving document - it is only a two days old - be kind to it and the intent of the authors-->
         <div class="container content-primary__content" id="keep-on">
           <div class="row" id="tips">           
@@ -27,7 +27,7 @@
                <p>Open office hours to support course transition will be held from <strong>8AM-5PM Monday-Friday in room 4102L</strong> of the <a href="https://www.google.com/maps/place/University+Learning+Center,+1000+Floyd+Ave,+Richmond,+VA+23220/@37.5474217,-77.4567296,17z/data=!3m1!4b1!4m5!3m4!1s0x89b1114437a0ac75:0xca1e28fab0d8094d!8m2!3d37.5474217!4d-77.4545409"  target="_blank">Academic Learning Commons (1000 Floyd Avenue)</a>.</p>  
                 
               <div class="alert-header">Virtual</div> 
-               <p><a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request&afterhours_support=No&teleconferencing=Yes">Click here to request a virtual meeting </a> at any point 8AM-10PM Monday-Friday or ask a question at any time.</p>                         
+               <p><a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request&business_hours_support=Yes&contact_type=Zoom">Click here to request a virtual meeting </a> at any point 8AM-10PM Monday-Friday or ask a question at any time.</p>                         
 
                <p>You can also <a href="https://altlab.vcu.edu/rapid-transition-support/?rr_topic=generic-request">request transition support online and/or after normal business hours here.</a></p>
             </div> 
@@ -36,7 +36,7 @@
 
             <p>Read the <a href="https://provost.vcu.edu/covidguidance/"><em>Coronavirus management at VCU: current instructional guidance for faculty</em></a> message from Provost Hackett and Dr. Buckley.</p>
 
-            <h2>The Goal = Academic Continuity</h2>
+            <h2 id="continuity">The Goal = Academic Continuity</h2>
 
             <p>This toolkit was developed to provide faculty with options to <strong>keep teaching</strong> and for faculty to consider providing options for students to support them as they <strong>keep learning</strong>. The tips, strategies, tools, and resources below are not intended to be a comprehensive lesson in online course pedagogy. The core purpose is to support faculty with a rapid transition to remote instruction that will promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity. </p>
 
@@ -140,8 +140,19 @@
     </div>
     <div class="col-md-8">
       <p>Communicate frequently and concisely, especially when you first move the class online. If you already have an established pattern and place for communication, continue using it. If not, establishing a consistent pattern and place for communication with students will help students gain comfort and prevent confusion.</p>
-    </div>
+    </div>      
   </div>
+  <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
+
   <!--end communicate row-->
 
   <!--tool blackboard announcements row-->
@@ -171,6 +182,16 @@
     </div>
   </div>
   <!--end bb announcements  A row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--tool email row-->
    <div class="row single-app-row" id="email">
     <div class="col-md-12">
@@ -202,6 +223,16 @@
     </div>
   </div>
   <!--end tool email row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--row share-->
     <div class="row app-row" id="share">
       <div class="col-md-12">
@@ -212,6 +243,16 @@
       </div>
     </div>
     <!--end share row-->
+      <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
 
     <!--tool bb share row-->
      <div class="row single-app-row" id="bb-share">
@@ -240,6 +281,16 @@
       </div>
     </div>
     <!--end bb share row-->
+      <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
     <!--tool g drive content row-->
      <div class="row single-app-row" id="gdrive">
       <div class="col-md-12">
@@ -268,6 +319,16 @@
       </div>
     </div>
     <!--end g drive tool row-->
+      <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--row  lecture-->
   <div class="row app-row" id="lecture">
     <div class="col-md-12">
@@ -278,6 +339,16 @@
     </div>
   </div>
   <!--end lecture row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--zoom row-->
   <div class="row single-app-row" id="zoom">
     <div class="col-md-12">
@@ -300,12 +371,23 @@
       <h4>Resources</h4>
       <ul>
         <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom Pro at VCU</a></li>
+        <li><a href="https://docs.google.com/document/d/1nmzTUPaVWGDZD2gjTPRGOlDBXWsJ89BPQ8MS0u-51fg/edit?ts=5e6a9e9e">Getting Started with Zoom at VCU</a></li>
         <li><a href="https://support.zoom.us/hc/en-us/articles/115004794983-Automatically-Transcribe-Cloud-Recordings-">Creating a Zoom transcript</a></li>
         <li><a href="https://www.youtube.com/watch?v=09C18oSB3uk&feature=youtu.be">Tips for making good videos and screencasts</a></li>
       </ul>
     </div>
   </div>
   <!--end zoom row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--kaltura row-->
   <div class="row kaltura single-app-row" id="kaltura">
     <div class="col-md-12">
@@ -335,6 +417,16 @@
     </div>
   </div>
   <!--end kaltura row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--row 3 create content-->
   <div class="row app-row" id="create">
     <div class="col-md-12">
@@ -345,6 +437,16 @@
     </div>
   </div>
   <!--end create content row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
 
   <!--tool g suite row-->
    <div class="row single-app-row" id="gsuite">
@@ -374,6 +476,16 @@
     </div>
   </div>
   <!--end g suite row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--tool A row-->
    <div class="row single-app-row" id="office">
     <div class="col-md-12">
@@ -400,6 +512,16 @@
     </div>
   </div>
   <!--end tool A row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
    <!--row ASSESSS-->
   <div class="row app-row" id="assess">
     <div class="col-md-12">
@@ -410,6 +532,16 @@
     </div>
   </div>
   <!--end ASSESS row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--tool respondus row-->
    <div class="row single-app-row" id="respondus">
     <div class="col-md-12">
@@ -437,6 +569,16 @@
     </div>
   </div>
   <!--end respondus row-->
+    <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
   <!--tool google form quiz row-->
    <div class="row single-app-row" id="gquiz">
     <div class="col-md-12">
@@ -464,7 +606,16 @@
     </div>
   </div>
   <!--end google form row-->
-
+  <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
 
    <!--row project-->
   <div class="row app-row" id="project">
@@ -479,7 +630,16 @@
     </div>
   </div>
   <!--end project row-->
-
+  <!--return block-->
+  <div class="return-block">
+        <div>
+          <a href="#tools">return to strategies</a>
+        </div>
+        <div>
+          <a href="#top">return to top</a>
+        </div>
+  </div>
+  <!--end return block-->
      <!--row various supports-->
   <div class="row app-row" id="support">
     <div class="col-md-12">
